# fastmono

./: .clang-tidy  .clang_complete  .gitignore  .gitmodules  Doxyfile  Readme.md  bst.hpp  bst.ipp  partition.hpp  partition.ipp  polygon.hpp  polygon.ipp  rb_interval.hpp  rb_interval.ipp  triangulate.ipp
benchmarks/: CMakeLists.txt  bench.cpp
benchmarks/polypartition/: README.md
